--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
         </div>    
         <div>
-            <p>this is new feture</p>
+            <p style="color: pink;">this is new feture</p>
         </div>
     </div>
 </body>
